# lil-jwt

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: deserialize_HS256.rs  deserialize_HS384.rs  deserialize_HS512.rs  deserialize_unsecured.rs  serialize_HS256.rs  serialize_HS384.rs  serialize_HS512.rs  serialize_unsecured.rs
src/: authenticated_writer.rs  base64_writer.rs  lib.rs
